# hSDK

./: .gitignore  LICENSE  README.md
extensions/Template/: .gitignore  CMakeLists.txt  ExampleExtension.cpp  Template.sln  Template.vcxproj  Template.vcxproj.filters  TestExtension.cpp  TestExtension.hpp  TestProperties.hpp
extensions/Template/res/: Extension.rc  Translations.json
include/: FusionAPI.hpp  MMF2API.hpp  hSDK.hpp
include/FusionAPI/: Cncf.h  Cncy.h
include/MMF2API/: LICENSE
include/hSDK/: BinaryStream.hpp  Extension.hpp  Parameters.hpp  Properties.hpp  Resources.hpp  Serialization.hpp  Translation.hpp
res/: hSDK.rc
sdk/: FusionAPI.hpp  hSDK.def  hSDK.hpp  hSDK.rc
sdk/hSDK/: BinaryStream.cpp  BinaryStream.hpp  Extension.hpp  Impl.hpp  Parameters.cpp  Parameters.hpp  Properties.cpp  Resources.cpp  Resources.hpp  RunData.hpp  Translation.hpp
sdk/json-parser/: json.h
src/: hSDK.cpp
src/hSDK/: BinaryStream.cpp  DLL.cpp  DLL.hpp  EditData.hpp  Extension.cpp  Impl.cpp  Impl.hpp  Parameters.cpp  Properties.cpp  Resources.cpp  RunData.hpp  Serialization.cpp  Translation.cpp  impl.cpp  impl.hpp
